# embedded-linux-telemetry-daemon

./: .gitignore  CMakeLists.txt  README.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
include/: app_config.h  mqtt_client.h  reconnect_backoff.h  status_payload.h  telemetry_payload.h  time_utils.h
src/: main.cpp  mqtt_client.cpp
tests/: CMakeLists.txt  test_backoff.cpp  test_config.cpp  test_payload.cpp  test_reconnect.cpp  test_topics.cpp
